fixed heading text alignment

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -18,11 +18,9 @@ $content-color: #444
 
 // img in the heading will determine the box
 .chapter-heading-text
-  bottom: 3em
+  bottom: 20%
   position: absolute
   width: 100%
-  @media screen and (min-width: 1440px)
-    bottom: 10em
 
   h1
     color: #fcfcfc
